web/app/src/assets/base.css
/* ... */
html,
body {
  accent-color: var(--color-accent);
  background-color: var(--color-background);
  color: var(--color-text);
  color-scheme: dark;
  font-family: var(--font-family-body);
  font-size: var(--font-size-base);
  height: 100vh;
  margin: 0;
  padding: 0;
}

#app {
  display: grid;
  grid-gap: var(--grid-gap);
  grid-template-areas:
    "header-L header-M header-R"
    "col-1 col-2 col-3"
    "footer footer footer";
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: var(--header-height) 1fr var(--footer-height);
  height: 100%;
  padding-left: var(--grid-gap);
  padding-right: var(--grid-gap);
  width: calc(100% - calc(var(--grid-gap) * 2));
}

body.is-two-columns #app {
  grid-template-areas:
    "header-L header-R"
    "col-1 col-2"
    "footer footer";
  grid-template-columns: 1fr 1fr;
  grid-template-rows: var(--header-height) 1fr var(--footer-height);
}

@media (max-width: 1280px) {
  #app {
    grid-template-areas:
    "header-L header-R"
    "col-1 col-2"
    "col-3 col-3"
    "footer footer";
    grid-template-columns: 1fr 1fr;
    grid-template-rows: var(--header-height) 1fr 1fr var(--footer-height);
  }
}

@media (max-width: 960px) {
  body.is-two-columns #app {
    grid-template-areas:
      "header-L header-R"
      "col-1 col-1"
      "col-2 col-2"
      "footer footer";
    grid-template-columns: 1fr;
    grid-template-rows: var(--header-height) 1fr 1fr var(--footer-height);
  }
}

.col {
  background-color: var(--color-background-column);
  border-radius: var(--border-radius);
  padding: var(--spacer-sm);

  /* These two are necessary for the automatic resizing of the tasks table: */
  /* Ensures that the table cannot push down the bottom of the column element,
  *  and thus the column height is a stable reference. */
  /* Firefox does not recognize "overlay" currently, so have "auto" as fallback. */
  overflow-y: auto;
  overflow-y: overlay;
  /* Ensures the offsetParent of the table is the column itself; without this,
  * offsetParent would be <body>. */
  position: relative;
}

.col-1 {
  grid-area: col-1;
}

.col-2 {
  grid-area: col-2;
}

.col-3 {
  grid-area: col-3;
}

.app-version {
  font-family: var(--font-family-mono);
  font-size: var(--font-size-sm);
}

a {
  color: currentColor;
  text-decoration: none;
}

a:hover {
  color: var(--color-accent);
  text-decoration: underline;
}

a.router-link-active {
  color: var(--color-accent);
}

header {
  align-items: center;
  color: var(--color-text-muted);
  display: flex;
  padding: 0 var(--spacer-sm);
}

header.mainmenu {
  grid-area: header-L;
}
header.farmstatus {
  grid-area: header-M;
  margin-left: auto;
  margin-right: auto;
}
@media (max-width: 1280px) {
  header.farmstatus {
    grid-area: header-L;
    margin-right: 0;
  }
}
@media (max-width: 1070px) {
  header.farmstatus {
    /* No more space to show it in the header. */
    display: none;
  }
}
body.is-two-columns header.farmstatus {
  grid-area: header-L;
  margin-right: 0;
}
header.links {
  grid-area: header-R;
}

header nav {
  margin-right: auto;
}

.navbar-brand {
  margin-right: var(--spacer);
}

nav > ul {
  align-items: center;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav > ul > li > a {
  display: block;
  padding: var(--spacer-xs) var(--spacer-sm);
  white-space: nowrap;
}

h2.column-title {
  border-bottom: var(--border-width) solid var(--color-border);
  color: var(--color-text-hint);
  font-size: var(--font-size-base);
  margin: 0;
  padding-bottom: var(--spacer-sm);
}

h3.sub-title {
  border-bottom: var(--border-width) solid var(--color-border);
  color: var(--color-text-hint);
  font-size: var(--font-size-base);
  margin: var(--spacer) 0 0;
  padding: 0 0 var(--spacer-sm);
}

dl {
  display: grid;
  font-family: var(--font-family-mono);
  font-size: var(--font-size-sm);
  grid-template-columns: max-content auto;
}

dl dt {
  font-weight: bold;
  text-align: right;
  width: 100px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

dl dd {
  margin-bottom: .133rem;
  margin-left: var(--spacer-sm);
  padding-bottom: .133rem;
  transition: color var(--transition-speed-fast) ease-out;
  word-break: break-word;
}

dl dd:hover {
  color: var(--color-text-highlight);
}

dl dd:empty {
  border-color: transparent;
}

.dl-no-data {
  color: var(--color-text-hint);
  font-family: var(--font-family-mono);
  font-size: var(--font-size-sm);
  padding: var(--spacer-lg) var(--spacer);
  text-align: center;
  cursor: default;
}

.app-footer {
  align-items: center;
  background-color: var(--color-background-column);
  border-radius: var(--border-radius);
  color: var(--color-text-muted);
  cursor: pointer;
  display: flex;
  font-size: var(--font-size-sm);
  grid-area: footer;
  padding: var(--spacer-sm);
  transition: background-color var(--transition-speed) ease-in-out;
}

.app-footer:hover {
  background-color: var(--color-background-column-highlight);
}

.app-footer:hover .app-footer-expand {
  margin-top: -5px;
}

.app-footer-expand {
  position: relative;
  stroke: var(--color-text-hint);
  transform: scale(.8);
  transition: stroke var(--transition-speed) ease-in-out, margin-top var(--transition-speed) ease-in-out;
}

.btn-bar {
  align-items: center;
  display: flex;
  flex-grow: 1;
  flex-wrap: wrap;
  gap: calc(var(--spacer-sm) / 3) var(--spacer-sm);
  padding: var(--spacer-sm) 0;
}

.btn-bar-group {
  align-items: center;
  display: flex;
  padding: var(--spacer-sm) 0;
  position: relative;
}

.btn-bar-group .btn-bar {
  padding: 0;
}

label {
  display: block;
}

fieldset {
  background-color: var(--color-background-column-highlight);
  border: none;
  margin-bottom: var(--spacer);
  border-radius: var(--border-radius);
}
/* ... */

